--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "core-js": "^2.4.0",
     "ejs": "^2.4.2",
     "express": "^4.14.0",
+    "lodash": "^4.14.1",
+    "node-uuid": "^1.4.7",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "socket.io": "^1.4.8",
