Formatting to look more like iMessage. All panels work. New Conversation button not wired up.

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "scripts": {
     "build:ts": "tsfmt -r && tsc --outDir $npm_package_config_outPath/",
     "postbuild:ts": "npm run lint -s",
-    "build": "npm run build:ts -s",
+		"build:css": "node_modules/node-sass/bin/node-sass -r src/ -o src/",
+		"build:css+w": "node_modules/node-sass/bin/node-sass -rw src/ -o src",
+    "build": "npm run build:css -s && npm run build:ts -s",
     "postbuild": "npm run copyAssets -s",
-    "build:w": "npm run build:ts -s -- -w",
+    "build:w": "concurrently 'npm run build:css+w' 'npm run build:ts -s -- -w'",
     "lint": "node_modules/tslint/bin/tslint -c tslint.json --project tsconfig.json src/**/*.ts",
     "copyAssets": "rsync -az --include='*/' --include='*.html' --include='*.css' --include='*.js' --include='*.ejs' --exclude='*'  --prune-empty-dirs src/ $npm_package_config_outPath/",
     "copyAssets:w": "onchange \"src/**/*.(html|ejs|css|js)\" -w -- npm run copyAssets -s",
@@ -34,6 +36,7 @@
     "concurrently": "^2.2.0",
     "live-reload": "^1.1.0",
     "mocha": "^2.5.3",
+    "node-sass": "^3.8.0",
     "onchange": "^2.5.0",
     "supertest": "^1.2.0",
     "tslint": "^3.13.0",
