Builds electron app and the server now.

--- a/package.json
+++ b/package.json
@@ -1,31 +1,37 @@
 {
-  "name": "ts-bootstrap",
+  "name": "desktop-chat",
+  "productName": "DesktopChat",
   "version": "0.1.0",
-  "description": "",
-  "main": "build/server/index.js",
+  "description": "A simple desktop chat app",
+  "main": "app/electron.js",
   "config": {
-    "outPath": "build"
+    "outPath": "build",
+    "appOutPath": "builds"
   },
   "scripts": {
+    "setup": "npm install -g electron-packager asar typescript tsfmt less concurrently nodemon onchange mocha tsd@next live-reload",
     "build:ts": "tsfmt -r && tsc --outDir $npm_package_config_outPath/",
     "postbuild:ts": "npm run lint -s",
-		"build:css": "node_modules/node-sass/bin/node-sass -r src/ -o src/",
-		"build:css+w": "node_modules/node-sass/bin/node-sass -rw src/ -o src",
+    "build:css": "node_modules/node-sass/bin/node-sass -r src/ -o src/",
+    "build:css+w": "node_modules/node-sass/bin/node-sass -rw src/ -o src",
     "build": "npm run build:css -s && npm run build:ts -s",
     "postbuild": "npm run copyAssets -s",
     "build:w": "concurrently 'npm run build:css+w' 'npm run build:ts -s -- -w'",
     "lint": "node_modules/tslint/bin/tslint -c tslint.json --project tsconfig.json src/**/*.ts",
-    "copyAssets": "rsync -az --include='*/' --include='*.html' --include='*.css' --include='*.js' --include='*.ejs' --exclude='*'  --prune-empty-dirs src/ $npm_package_config_outPath/",
-    "copyAssets:w": "onchange \"src/**/*.(html|ejs|css|js)\" -w -- npm run copyAssets -s",
+    "copyAssets": "rsync -az --include='*/' --include='*.html' --include='*.css' --include='*.js' --include='*.ejs' --include='*.sh' --exclude='*'  --prune-empty-dirs src/ $npm_package_config_outPath/",
+    "copyAssets:w": "onchange \"src/**/*.(html|ejs|css|js|sh)\" -w -- npm run copyAssets -s",
     "pretest": "npm run build",
     "mocha": "mocha -c -R spec -r $npm_package_config_outPath/test.setup `find $npm_package_config_outPath/ -type f -name *.test.js`",
     "mocha:w": "npm run mocha -s -- -w",
     "test": "npm run mocha -s -- -d",
     "test:w": "concurrently 'npm run build:w -s' 'npm run test -s -- -w'",
-    "clean": "rm -rf $npm_package_config_outPath/",
+    "clean": "rm -rf $npm_package_config_outPath/ $npm_package_config_appOutPath/",
     "live-reload": "live-reload --port 35729 $npm_package_config_outPath/ --delay 2000",
     "watch": "concurrently 'npm run build:w -s' 'npm run copyAssets:w -s'",
-    "start": "npm run build && concurrently 'npm run watch' \"nodemon -w $npm_package_config_outPath/ -d 1 --debug $npm_package_config_outPath/public/server.js\" 'npm run live-reload -s' 'open http://localhost:3000/'"
+    "start": "npm run build && concurrently 'npm run watch' \"nodemon -w $npm_package_config_outPath/ -d 1 --debug $npm_package_config_outPath/public/server.js\" 'npm run live-reload -s' 'open http://localhost:3000/'",
+    "start:app": "npm start && electron $npm_package_config_outPath/electron.js",
+    "dist:app": "npm run build && ./build-app.sh $npm_package_config_outPath $npm_package_config_appOutPath",
+    "dist:server": "./build-server.sh"
   },
   "keywords": [],
   "author": "",
@@ -34,6 +40,7 @@
     "chai": "^3.5.0",
     "codelyzer": "0.0.25",
     "concurrently": "^2.2.0",
+    "copy-node-modules": "^0.4.1",
     "live-reload": "^1.1.0",
     "mocha": "^2.5.3",
     "node-sass": "^3.8.0",
@@ -63,6 +70,7 @@
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.0",
     "ejs": "^2.4.2",
+    "electron-prebuilt": "^1.3.1",
     "express": "^4.14.0",
     "lodash": "^4.14.1",
     "node-uuid": "^1.4.7",
