Group chat works! Got rid of bootstrap.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "postbuild": "npm run copyAssets -s",
     "build:w": "concurrently 'npm run build:css+w' 'npm run build:ts -s -- -w'",
     "lint": "node_modules/tslint/bin/tslint -c tslint.json --project tsconfig.json src/**/*.ts",
-    "copyAssets": "rsync -az --include='*/' --include='*.html' --include='*.css' --include='*.js' --include='*.ejs' --include='*.sh' --exclude='*'  --prune-empty-dirs src/ $npm_package_config_outPath/",
+    "copyAssets": "rsync -az --include='*/' --include='*.html' --include='*.css' --include='*.js' --include='*.ejs' --include='*.sh' --include='fonts/*' --exclude='*'  --prune-empty-dirs src/ $npm_package_config_outPath/",
     "copyAssets:w": "onchange \"src/**/*.(html|ejs|css|js|sh)\" -w -- npm run copyAssets -s",
     "pretest": "npm run build",
     "mocha": "mocha -c -R spec -r $npm_package_config_outPath/test.setup `find $npm_package_config_outPath/ -type f -name *.test.js`",
@@ -28,10 +28,11 @@
     "clean": "rm -rf $npm_package_config_outPath/ $npm_package_config_appOutPath/",
     "live-reload": "live-reload --port 35729 $npm_package_config_outPath/ --delay 2000",
     "watch": "concurrently 'npm run build:w -s' 'npm run copyAssets:w -s'",
-    "start": "npm run build && concurrently 'npm run watch' \"nodemon -w $npm_package_config_outPath/ -d 1 --debug $npm_package_config_outPath/public/server.js\" 'npm run live-reload -s' 'open http://localhost:3000/'",
-    "start:app": "npm start && electron $npm_package_config_outPath/electron.js",
-    "dist:app": "npm run build && ./build-app.sh $npm_package_config_outPath $npm_package_config_appOutPath",
-    "dist:server": "./build-server.sh"
+    "start": "npm run build && concurrently 'npm run watch' \"nodemon -w $npm_package_config_outPath/ -d 1 --debug $npm_package_config_outPath/server/index.js\" 'npm run live-reload -s' 'open http://localhost:1337/'",
+    "start:app": "DEBUG=true electron $npm_package_config_outPath/electron.js",
+    "dist": "npm run build && npm run dist:app && npm run dist:server",
+    "dist:app": "./build-app.sh $npm_package_config_outPath $npm_package_config_appOutPath",
+    "dist:server": "./build-server.sh $npm_package_config_outPath"
   },
   "keywords": [],
   "author": "",
