--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@angular/router": "3.0.0-beta.1",
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.4",
+    "@reactivex/rxjs": "^5.0.0-beta.10",
     "angular2-in-memory-web-api": "0.0.14",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.6",
