Adding notifications. Clicking a notification opens the conversation.

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "postbuild": "npm run copyAssets -s",
     "build:w": "concurrently 'npm run build:css+w' 'npm run build:ts -s -- -w'",
     "lint": "node_modules/tslint/bin/tslint -c tslint.json --project tsconfig.json src/**/*.ts",
-    "copyAssets": "rsync -az --include='*/' --include='*.html' --include='*.css' --include='*.js' --include='*.ejs' --include='*.sh' --include='fonts/*' --exclude='*'  --prune-empty-dirs src/ $npm_package_config_outPath/",
-    "copyAssets:w": "onchange \"src/**/*.(html|ejs|css|js|sh)\" -w -- npm run copyAssets -s",
+    "copyAssets": "rsync -az --include='*/' --include='*.html' --include='*.css' --include='*.js' --include='*.ejs' --include='*.sh' --include='fonts/*' --include='images/*' --exclude='*'  --prune-empty-dirs src/ $npm_package_config_outPath/",
+    "copyAssets:w": "onchange \"src/**/*.(html|ejs|css|js|sh|png)\" -w -- npm run copyAssets -s",
     "pretest": "npm run build",
     "mocha": "mocha -c -R spec -r $npm_package_config_outPath/test.setup `find $npm_package_config_outPath/ -type f -name *.test.js`",
     "mocha:w": "npm run mocha -s -- -w",
